smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/metadata/not-newline-after-metadata.smithy
// Syntax error at line 3, column 9
$version: "2.0"
metadata
foo = "bar"
